# arduino-for-jcn

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  SCHEMATICS.txt  SETUP_GUIDE.md  WORKSPACE  config.yaml  platformio.ini
.beads/: interactions.jsonl
.github/workflows/: ci.yml
src/: calibration.cpp  calibration.h  config.h  controller.cpp  controller.h  lights.cpp  lights.h  main.cpp  mock_arduino.cpp  mock_arduino.h  power_monitor.cpp  power_monitor.h  rtc.cpp  rtc.h  sensors.cpp  sensors.h  wifi_logger.cpp  wifi_logger.h  yaml_config.cpp  yaml_config.h
test/: test_controller.cpp  test_lights.cpp  test_main.cpp  test_sensors.cpp  test_yaml_config.cpp
