load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Main library (for native testing, not Arduino)
cc_library(
    name = "hydro_lib",
    srcs = [
        "src/calibration.cpp",
        "src/controller.cpp",
        "src/lights.cpp",
        "src/mock_arduino.cpp",
        "src/power_monitor.cpp",
        "src/rtc.cpp",
        "src/sensors.cpp",
        "src/yaml_config.cpp",
    ],
    hdrs = [
        "src/calibration.h",
        "src/config.h",
        "src/controller.h",
        "src/lights.h",
        "src/mock_arduino.h",
        "src/power_monitor.h",
        "src/rtc.h",
        "src/sensors.h",
        "src/yaml_config.h",
    ],
    copts = ["-std=c++14"],
    includes = ["src"],
)

# All tests combined
cc_test(
    name = "all_tests",
    size = "small",
    srcs = [
        "test/test_controller.cpp",
        "test/test_lights.cpp",
        "test/test_main.cpp",
        "test/test_sensors.cpp",
        "test/test_yaml_config.cpp",
    ],
    copts = ["-std=c++14"],
    deps = [
        ":hydro_lib",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

# Individual test targets for faster iteration
cc_test(
    name = "sensor_tests",
    size = "small",
    srcs = [
        "test/test_main.cpp",
        "test/test_sensors.cpp",
    ],
    copts = ["-std=c++14"],
    deps = [
        ":hydro_lib",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "controller_tests",
    size = "small",
    srcs = [
        "test/test_controller.cpp",
        "test/test_main.cpp",
    ],
    copts = ["-std=c++14"],
    deps = [
        ":hydro_lib",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "yaml_config_tests",
    size = "small",
    srcs = [
        "test/test_main.cpp",
        "test/test_yaml_config.cpp",
    ],
    copts = ["-std=c++14"],
    deps = [
        ":hydro_lib",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "light_tests",
    size = "small",
    srcs = [
        "test/test_lights.cpp",
        "test/test_main.cpp",
    ],
    copts = ["-std=c++14"],
    deps = [
        ":hydro_lib",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
